Update HTML exercise

--- a/signin.html
+++ b/signin.html
@@ -20,12 +20,19 @@
         </header>
 
         <div class="container">
-            <h1> Đăng nhập </h1>
+            
             <form class="login-form">
-                <label for="username">Số CMND/CCCD: </label><br>
-                <input type="text" id="username" name="username" value=""><br>
-                <label for="password">Last name:</label><br>
-                <input type="password" id="password" name="password" value=""><br><br>
+                <div class="form-heading">
+                    <h1> Đăng nhập </h1>
+                </div>
+                <div class="form-input">
+                    <label for="username">Số CMND/CCCD: </label>
+                    <input type="text" id="username" name="username" value=""><br>
+                </div>
+                <div class="form-input">
+                    <label for="password">Mật khẩu:</label>
+                    <input type="password" id="password" name="password" value=""><br>
+                </div>
                 <input type="submit" value="Đăng nhập">
             </form>
             
