--- a/CoCo/front-end/related-people/information.html
+++ b/CoCo/front-end/related-people/information.html
@@ -1,12 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="../css/template-style.css">
+    <link rel="stylesheet" href="./css/related.css">
     <title>Thông tin chi tiết cá nhân</title>
 </head>
+
 <body>
-    
+    <main>
+        <nav class="navbar">
+            <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+            <ul class="nav-list">
+                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+            </ul>
+            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        </nav>
+        <img src="../images/banner.png" alt="banner" class="banner">
+        <div class="content">
+            <div class="container">
+                <div class="side-info">
+                    <div>Avatar</div>
+                    <div>Nguyễn Đăng Tiến Thành</div>
+                    <div class="main-info">
+                        <div class="info-tag">CMND</div>
+                        <div class="info-tag">Ngày sinh</div>
+                        <div class="info-tag">Dư nợ</div>
+                        <div class="info-tag">Tài khoản</div>
+                    </div>
+                    <div>Thanh toán / nạp tiền</div>
+                </div>
+                <div class="detail-container">
+                    <div class="row-tabs">
+                        <div class="tab">Thông tin chi tiết</div>
+                        <div class="tab">Lịch sử được quản lý</div>
+                        <div class="tab">Lịch sử tiêu thụ</div>
+                        <div class="tab">Lịch sử thanh toán</div>
+                    </div>
+                    <div class="detail">
+                        <div class="basic-info">//BASIC INFO</div>
+                        <div class="status">//STATUS</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="footer-box">
+                    <h3>VỀ CHÚNG TÔI</h3>
+                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương thức
+                        thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
+                </div>
+                <div class="footer-box">
+                    <h3>LIÊN HỆ</h3>
+                    <div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-phone"></span>
+                            <span>+84945335984</span>
+                        </div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-envelope"></span>
+                            <span>coco123@gmail.com</span>
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <hr style="border: 2px solid white;background-color: white; width: 98%" />
+                <div class="footer-bottom-slogan">
+                    <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
+                    <span style="float: right;">2022</span>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
+
 </html>
