--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/CoCo/front-end/css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -15,7 +15,7 @@
 <body>
     <main>
         <nav class="navbar">
-            <img src="/images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+            <img src="/CoCo/front-end/images/Logo.png" alt="logo" style="height:65px;align-self:center;">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
                 <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
@@ -24,7 +24,7 @@
             </ul>
             <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
         </nav>
-        <img src="/images/banner.png" alt="banner" class="banner">
+        <img src="/CoCo/front-end/images/banner.png" alt="banner" class="banner">
         <div class="content">
             <div class="path">
                 <a href="/trang-chu">Trang chủ > </a>
@@ -144,7 +144,7 @@
                         <div class="footer-contact">
                             <span class="fa-solid fa-envelope"></span>
                             <span>coco123@gmail.com</span>
-                            <img src="images/Logo.png" alt="logo" style="width:200px;" />
+                            <img src="/CoCo/front-end/images/Logo.png" alt="logo" style="width:200px;" />
                         </div>
 
                     </div>
