--- a/CoCo/front-end/related-people/information.html
+++ b/CoCo/front-end/related-people/information.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <link rel="stylesheet" href="../css/template-style.css">
     <link rel="stylesheet" href="./css/related.css">
@@ -26,29 +27,54 @@
             <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
         </nav>
         <img src="../images/banner.png" alt="banner" class="banner">
-        <div class="content">
-            <div class="container">
+        <div class="content" style="padding: 20px 20px;">
+            <div class="path">
+                <a href="/trang-chu">Trang chủ > </a>
+                <a href="/nhu-yeu-pham">Thông tin cá nhân > </a>
+                <a href="/danh-sach-goi-san-pham">Thông tin chi tiết</a>
+            </div>
+            <div class="info-container">
                 <div class="side-info">
-                    <div>Avatar</div>
-                    <div>Nguyễn Đăng Tiến Thành</div>
-                    <div class="main-info">
-                        <div class="info-tag">CMND</div>
-                        <div class="info-tag">Ngày sinh</div>
-                        <div class="info-tag">Dư nợ</div>
-                        <div class="info-tag">Tài khoản</div>
+                    <div id="avatar">
+                        <img src="images/avatar.jpg" alt="avatar.jpg">
                     </div>
-                    <div>Thanh toán / nạp tiền</div>
+                    <div>
+                        <p id="username">Nguyễn Đăng Tiến Thành</p>
+                    </div>
+                    <div class="main-info">
+                        <div class="info-tag">CMND:&nbsp;123456789000</div>
+                        <div class="info-tag">Ngày sinh:&nbsp;21/04/2001</div>
+                        <div class="info-tag">Dư nợ:&nbsp;<span style="color: red;">-750,000đ</span></div>
+                        <div class="info-tag">Tài khoản:&nbsp;<span style="color: green">1,350,000đ</span></div>
+                    </div>
+                    <div id="account" class="d-inline-flex justify-content-around">
+                        <div id="payment" class="btn-money text-white">Thanh toán
+                        </div>
+                        <div id="prepaid" class="btn-money text-white">Nạp tiền</div>
+                    </div>
                 </div>
                 <div class="detail-container">
-                    <div class="row-tabs">
-                        <div class="tab">Thông tin chi tiết</div>
-                        <div class="tab">Lịch sử được quản lý</div>
-                        <div class="tab">Lịch sử tiêu thụ</div>
-                        <div class="tab">Lịch sử thanh toán</div>
+                    <div id="row-tabs">
+                        <div id="tab-detail" class="tab"><a href="#">Thông tin chi tiết</a></div>
+                        <div id="tab-history" class="tab"><a href="#">Lịch sử được quản lý</a></div>
+                        <div id="tab-consumption" class="tab"><a href="#">Lịch sử tiêu thụ</a></div>
+                        <div id="tab-payment" class="tab"><a href="#">Lịch sử thanh toán</a></div>
                     </div>
-                    <div class="detail">
-                        <div class="basic-info">//BASIC INFO</div>
-                        <div class="status">//STATUS</div>
+                    <div id="detail">
+                        <div id="basic-info">
+                            <div id="name-gender-DOB">
+                                <div id="name">Họ tên:&nbsp;<span class="fw-bold">Nguyễn Đăng Tiến Thành</span></div>
+                                <div id="gender">Giới:&nbsp;<span class="fw-bold">Nam</span></div>
+                                <div id="DOB">Ngày sinh:&nbsp;<span class="fw-bold">21/04/2001</span></div>
+                            </div>
+                            <div id="ID">Số CMND/CCCD:&nbsp;<span class="fw-bold">123456789000</span></div>
+                            <div id="address">Địa chỉ:&nbsp;<span class="fw-bold">227 Nguyễn Văn Cừ, Phường 1, Quận 5, TP.HCM</span></div>
+                        </div>
+                        <div id="status">
+                            <div id="current-status">Tình trạng hiện tại:&nbsp;<span class="fw-bold">F0</span></div>
+                            <div id="hospital">Địa điểm cách ly / điều trị:&nbsp;<span class="fw-bold">Bệnh viện dã chiến số 2 - TP.HCM</span></div>
+                            <div id="note">Ghi chú:&nbsp;<span class="fw-bold"> Đã nhiễm biến chủng Delta vào thán 11/2021. xuất viện 05/12/2021</span></div>
+                        </div>
                     </div>
                 </div>
             </div>
