Managed History Tab of Personal Information Page

--- a/CoCo/front-end/related-people/information.html
+++ b/CoCo/front-end/related-people/information.html
@@ -17,7 +17,7 @@
 <body>
     <main>
         <nav class="navbar">
-            <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
                 <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
@@ -30,8 +30,8 @@
         <div class="content" style="padding: 20px 20px;">
             <div class="path">
                 <a href="/trang-chu">Trang chủ > </a>
-                <a href="/nhu-yeu-pham">Thông tin cá nhân > </a>
-                <a href="/danh-sach-goi-san-pham">Thông tin chi tiết</a>
+                <a href="/thong-tin-ca-nhan">Thông tin cá nhân > </a>
+                <a href="/thong-tin-chi-tiet">Thông tin chi tiết</a>
             </div>
             <div class="info-container">
                 <div class="side-info">
@@ -55,7 +55,7 @@
                 </div>
                 <div class="detail-container">
                     <div id="row-tabs">
-                        <div id="tab-detail" class="tab"><a href="#">Thông tin chi tiết</a></div>
+                        <div id="tab-detail" class="tab" style="background-color: #EEEEEE;"><a href="#">Thông tin chi tiết</a></div>
                         <div id="tab-history" class="tab"><a href="#">Lịch sử được quản lý</a></div>
                         <div id="tab-consumption" class="tab"><a href="#">Lịch sử tiêu thụ</a></div>
                         <div id="tab-payment" class="tab"><a href="#">Lịch sử thanh toán</a></div>
@@ -73,7 +73,7 @@
                         <div id="status">
                             <div id="current-status">Tình trạng hiện tại:&nbsp;<span class="fw-bold">F0</span></div>
                             <div id="hospital">Địa điểm cách ly / điều trị:&nbsp;<span class="fw-bold">Bệnh viện dã chiến số 2 - TP.HCM</span></div>
-                            <div id="note">Ghi chú:&nbsp;<span class="fw-bold"> Đã nhiễm biến chủng Delta vào thán 11/2021. xuất viện 05/12/2021</span></div>
+                            <div id="note">Ghi chú:&nbsp;<span class="fw-bold"> Đã nhiễm biến chủng Delta vào tháng 11/2021. xuất viện 05/12/2021</span></div>
                         </div>
                     </div>
                 </div>
