Consumption History Tab of Personal Information Page

--- a/CoCo/front-end/related-people/information.html
+++ b/CoCo/front-end/related-people/information.html
@@ -55,7 +55,8 @@
                 </div>
                 <div class="detail-container">
                     <div id="row-tabs">
-                        <div id="tab-detail" class="tab" style="background-color: #EEEEEE;"><a href="#">Thông tin chi tiết</a></div>
+                        <div id="tab-detail" class="tab" style="background-color: #EEEEEE;"><a href="#">Thông tin chi
+                                tiết</a></div>
                         <div id="tab-history" class="tab"><a href="#">Lịch sử được quản lý</a></div>
                         <div id="tab-consumption" class="tab"><a href="#">Lịch sử tiêu thụ</a></div>
                         <div id="tab-payment" class="tab"><a href="#">Lịch sử thanh toán</a></div>
@@ -68,12 +69,15 @@
                                 <div id="DOB">Ngày sinh:&nbsp;<span class="fw-bold">21/04/2001</span></div>
                             </div>
                             <div id="ID">Số CMND/CCCD:&nbsp;<span class="fw-bold">123456789000</span></div>
-                            <div id="address">Địa chỉ:&nbsp;<span class="fw-bold">227 Nguyễn Văn Cừ, Phường 1, Quận 5, TP.HCM</span></div>
+                            <div id="address">Địa chỉ:&nbsp;<span class="fw-bold">227 Nguyễn Văn Cừ, Phường 1, Quận 5,
+                                    TP.HCM</span></div>
                         </div>
                         <div id="status">
                             <div id="current-status">Tình trạng hiện tại:&nbsp;<span class="fw-bold">F0</span></div>
-                            <div id="hospital">Địa điểm cách ly / điều trị:&nbsp;<span class="fw-bold">Bệnh viện dã chiến số 2 - TP.HCM</span></div>
-                            <div id="note">Ghi chú:&nbsp;<span class="fw-bold"> Đã nhiễm biến chủng Delta vào tháng 11/2021. xuất viện 05/12/2021</span></div>
+                            <div id="hospital">Địa điểm cách ly / điều trị:&nbsp;<span class="fw-bold">Bệnh viện dã
+                                    chiến số 2 - TP.HCM</span></div>
+                            <div id="note">Ghi chú:&nbsp;<span class="fw-bold"> Đã nhiễm biến chủng Delta vào tháng
+                                    11/2021. xuất viện 05/12/2021</span></div>
                         </div>
                     </div>
                 </div>
