--- a/CoCo/front-end/related-people/managed-history.html
+++ b/CoCo/front-end/related-people/managed-history.html
@@ -56,144 +56,145 @@
                 <div class="detail-container">
                     <div id="row-tabs">
                         <div id="tab-detail" class="tab"><a href="#">Thông tin chi tiết</a></div>
-                        <div id="tab-history" class="tab" style="background-color: #EEEEEE;"><a href="#">Lịch sử được quản lý</a></div>
+                        <div id="tab-history" class="tab" style="background-color: #EEEEEE;"><a href="#">Lịch sử được
+                                quản lý</a></div>
                         <div id="tab-consumption" class="tab"><a href="#">Lịch sử tiêu thụ</a></div>
                         <div id="tab-payment" class="tab"><a href="#">Lịch sử thanh toán</a></div>
                     </div>
                     <div id="detail-history">
                         <!--Code here-->
-                        <div class="table-responsive" style="height: 90%;">
-                        <table class="table table-bordered table-striped" >
-                            <thead style="position: sticky; top: 0; background-color: #398AB9;">
-                              <tr>
-                                <th class="text-white history-header" scope="col">Thời gian</th>
-                                <th class="text-white history-header" scope="col">Loại cập nhật</th>
-                                <th class="text-white history-header" scope="col">Trạng thái cũ</th>
-                                <th class="text-white history-header" scope="col">Trạng thái mới</th>
-                                <th class="text-white history-header" scope="col">Ghi chú</th>
-                              </tr>
-                            </thead>
-                            <tbody>
-                              <tr>
-                                <td>2022-02-24 14:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>-</td>
-                                <td>F1</td>
-                                <td>Tiếp nhận mới</td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-24 14:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>-</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Tiếp nhận mới</td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Tình trạng nhiễm</td>
-                                <td>F1</td>
-                                <td>F0</td>
-                                <td></td>
-                              </tr>
-                              <tr>
-                                <td>2022-02-26 15:00:00</td>
-                                <td>Địa điểm</td>
-                                <td>KTX Khu B - ĐHQG HCM</td>
-                                <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
-                                <td></td>
-                              </tr>
-                             
-                            </tbody>
-                          </table>
-                        </div>
+                        <div class="table-responsive" style="height: 100%;">
+                            <table class="table table-bordered table-striped">
+                                <thead style="position: sticky; top: 0; background-color: #398AB9;">
+                                    <tr>
+                                        <th class="text-white history-header" scope="col">Thời gian</th>
+                                        <th class="text-white history-header" scope="col">Loại cập nhật</th>
+                                        <th class="text-white history-header" scope="col">Trạng thái cũ</th>
+                                        <th class="text-white history-header" scope="col">Trạng thái mới</th>
+                                        <th class="text-white history-header" scope="col">Ghi chú</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>2022-02-24 14:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>-</td>
+                                        <td>F1</td>
+                                        <td>Tiếp nhận mới</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 14:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>-</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Tiếp nhận mới</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Tình trạng nhiễm</td>
+                                        <td>F1</td>
+                                        <td>F0</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-26 15:00:00</td>
+                                        <td>Địa điểm</td>
+                                        <td>KTX Khu B - ĐHQG HCM</td>
+                                        <td>Bệnh viện dã chiến số 7 - TP.HCM</td>
+                                        <td></td>
+                                    </tr>
+
+                                </tbody>
+                            </table>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 
         <footer class="footer">
