--- a/CoCo/front-end/related-people/consumption-history.html
+++ b/CoCo/front-end/related-people/consumption-history.html
@@ -1,12 +1,250 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="../css/template-style.css">
+    <link rel="stylesheet" href="./css/related.css">
     <title>Lịch sử tiêu thụ</title>
 </head>
+
 <body>
-    
+    <main>
+        <nav class="navbar">
+            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
+            <ul class="nav-list">
+                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+            </ul>
+            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        </nav>
+        <img src="../images/banner.png" alt="banner" class="banner">
+        <div class="content" style="padding: 20px 20px;">
+            <div class="path">
+                <a href="/trang-chu">Trang chủ > </a>
+                <a href="/thong-tin-ca-nhan">Thông tin cá nhân > </a>
+                <a href="/lich-su-tieu-thu">Lịch sử tiêu thụ</a>
+            </div>
+            <div class="info-container">
+                <div class="side-info">
+                    <div id="avatar">
+                        <img src="images/avatar.jpg" alt="avatar.jpg">
+                    </div>
+                    <div>
+                        <p id="username">Nguyễn Đăng Tiến Thành</p>
+                    </div>
+                    <div class="main-info">
+                        <div class="info-tag">CMND:&nbsp;123456789000</div>
+                        <div class="info-tag">Ngày sinh:&nbsp;21/04/2001</div>
+                        <div class="info-tag">Dư nợ:&nbsp;<span style="color: red;">-750,000đ</span></div>
+                        <div class="info-tag">Tài khoản:&nbsp;<span style="color: green">1,350,000đ</span></div>
+                    </div>
+                    <div id="account" class="d-inline-flex justify-content-around">
+                        <div id="payment" class="btn-money text-white">Thanh toán
+                        </div>
+                        <div id="prepaid" class="btn-money text-white">Nạp tiền</div>
+                    </div>
+                </div>
+                <div class="detail-container">
+                    <div id="row-tabs">
+                        <div id="tab-detail" class="tab"><a href="#">Thông tin chi tiết</a></div>
+                        <div id="tab-history" class="tab"><a href="#">Lịch sử được
+                                quản lý</a></div>
+                        <div id="tab-consumption" class="tab" style="background-color: #EEEEEE;"><a href="#">Lịch sử
+                                tiêu thụ</a></div>
+                        <div id="tab-payment" class="tab"><a href="#">Lịch sử thanh toán</a></div>
+                    </div>
+                    <div id="detail-history">
+                        <!--Code here-->
+                        <div class="table-responsive" style="height: 100%;">
+                            <table class="table table-bordered table-striped">
+                                <thead style="position: sticky; top: 0; background-color: #398AB9;">
+                                    <tr>
+                                        <th class="text-white history-header" scope="col">Thời gian</th>
+                                        <th class="text-white history-header" scope="col">Tên gói hàng</th>
+                                        <th class="text-white history-header" scope="col">Đơn giá</th>
+                                        <th class="text-white history-header" scope="col">Số lượng</th>
+                                        <th class="text-white history-header" scope="col">Thành tiền</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Thịt cá trứng 1</td>
+                                        <td>436,000đ</td>
+                                        <td>1</td>
+                                        <td>436,000đ</td>
+                                    </tr>
+                                    <tr>
+                                        <td>2022-02-24 15:00:00</td>
+                                        <td>Rau củ quả 3</td>
+                                        <td>75,000đ</td>
+                                        <td>2</td>
+                                        <td>150,000đ</td>
+                                    </tr>
+
+
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="footer-box">
+                    <h3>VỀ CHÚNG TÔI</h3>
+                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương thức
+                        thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
+                </div>
+                <div class="footer-box">
+                    <h3>LIÊN HỆ</h3>
+                    <div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-phone"></span>
+                            <span>+84945335984</span>
+                        </div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-envelope"></span>
+                            <span>coco123@gmail.com</span>
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <hr style="border: 2px solid white;background-color: white; width: 98%" />
+                <div class="footer-bottom-slogan">
+                    <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
+                    <span style="float: right;">2022</span>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
+
 </html>
