--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -42,21 +42,19 @@
             <img src="images/banner.png" alt="banner" class="banner">
         </section>
 
-        <section class="content">
+        <section class="content container-fluid py-5">
             <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
-            <form class="login-form">
-                <table>
-                    <tr class="form-input">
-                        <th><label for="username">Số CMND/CCCD: </label></th>
-                        <td><input type="text" id="username" name="username" value=""></td>
-                    </tr>
-                    <tr class="form-input">
-                        <th><label for="password">Mật khẩu:</label></th>
-                        <td><input type="password" id="password" name="password" value=""></td>
-                    </tr>
-                </table>
-                <input type="submit" value="Đăng nhập">
+            <form class="login-form py-5 px-5">
+                <div class="form-floating mb-3">
+                    <input class="form-control border-2 border-dark" id="floatingInput" placeholder="name@example.com">
+                    <label for="floatingInput">Số CMND/CCCD</label>
+                  </div>    
+                  <div class="form-floating">
+                    <input type="password" class="form-control border-2 border-dark" id="floatingPassword" placeholder="Password">
+                    <label for="floatingPassword">Mật khẩu</label>
+                  </div>
+                <butto type="submit" class=" sign-in">ĐĂNG NHẬP</button>
             </form>
         </section>
 
