--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -24,17 +24,6 @@
                     <a class="navbar-brand" href="#">
                         <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                     </a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-                        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="#">Home</a>
-                            </li>
-                        </ul>
-                    </div>
                 </div>
             </nav>
         </header>
@@ -45,17 +34,23 @@
         <section class="content container-fluid py-5">
             <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
 
-            <form class="login-form py-5 px-5">
-                <div class="form-floating mb-3">
-                    <input class="form-control border-2 border-dark" id="floatingInput" placeholder="name@example.com">
-                    <label for="floatingInput">Số CMND/CCCD</label>
-                  </div>    
-                  <div class="form-floating">
-                    <input type="password" class="form-control border-2 border-dark" id="floatingPassword" placeholder="Password">
-                    <label for="floatingPassword">Mật khẩu</label>
-                  </div>
-                <butto type="submit" class=" sign-in">ĐĂNG NHẬP</button>
-            </form>
+            <div class="login-form py-5 px-5">
+                <form>
+                    <div class="form-floating mb-3">
+                        <input class="form-control border-2 border-dark" id="floatingInput"
+                            placeholder="name@example.com">
+                        <label for="floatingInput">Số CMND/CCCD</label>
+                    </div>
+                    <div class="form-floating">
+                        <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
+                            placeholder="Password">
+                        <label for="floatingPassword">Mật khẩu</label>
+                    </div>
+                    <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
+                </form>
+                <a href="#" class="password-missing">Quên mật khẩu?</a>
+            </div>
+
         </section>
 
         <footer class="footer">
