--- a/CoCo/front-end/manager/products/product-list-page.html
+++ b/CoCo/front-end/manager/products/product-list-page.html
@@ -7,8 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CoCo/front-end/css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
+    <link rel="stylesheet" href="css/pagination.css">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <script src="data.json"></script>
     <title>Document</title>
 </head>
 
@@ -35,80 +37,8 @@
                 <input type="text" class="searchbar-input" placeholder="Tìm kiếm nhu yếu phẩm">
                 <i class="fa-solid fa-magnifying-glass"></i>
             </div>
-            <div class="product-list">
-                <div class="product-cardview">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
-                        </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
-                    </div>
-                </div>
-                <div class="product-cardview">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
-                        </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
-                    </div>
-                </div>
-                <div class="product-cardview">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
-                        </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
-                    </div>
-                </div>
-                <div class="product-cardview">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
-                        </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
-                    </div>
-                </div>
-                <div class="product-cardview">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
-                        </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
-                    </div>
-                </div>
-                <div class="product-cardview">
-                    <img src="images/thit-heo.jpg" alt="product">
-                    <div class="product-cardview-box">
-                        <div class="product-cardview-info">
-                            <a href="/">Thịt heo 500gram</a>
-                            <p>100.000 VNĐ</p>
-                        </div>
-                       <div class="product-cardview-action">
-                           <span class="fa-solid fa-trash-can fa-xl"></span>
-                       </div>
-                    </div>
-                </div>
-                <div class="product-cardview">
+            <div id="product-list" class="product-list">
+                <div class="product-cardview invisible">
                     <img src="images/thit-heo.jpg" alt="product">
                     <div class="product-cardview-box">
                         <div class="product-cardview-info">
@@ -121,7 +51,21 @@
                     </div>
                 </div>
             </div>
-           
+            <div class="page-container">
+                <button class="first-page" disabled>
+                  <i class="fas fa-angle-double-left"></i>
+                </button>
+                <button class="prev-page" disabled>
+                  <i class="fas fa-angle-left"></i>
+                </button>
+                <div id="pagination"></div>
+                <button class="next-page">
+                  <i class="fas fa-angle-right"></i>
+                </button>
+                <button class="last-page">
+                  <i class="fas fa-angle-double-right"></i>
+                </button>
+            </div>
             <div class="button-add">
                 <i class="fa-solid fa-plus fa-3x"></i>
             </div>
@@ -159,6 +103,8 @@
             </div>
         </footer>
     </main>
+    <script src="javascript/product-list-page.js"></script>
+    <script src="./javascript/pagination.js"></script>
 </body>
 
 </html>
