Payment History Tab of Personal Information Page + link tabs

--- a/CoCo/front-end/related-people/managed-history.html
+++ b/CoCo/front-end/related-people/managed-history.html
@@ -55,11 +55,10 @@
                 </div>
                 <div class="detail-container">
                     <div id="row-tabs">
-                        <div id="tab-detail" class="tab"><a href="#">Thông tin chi tiết</a></div>
-                        <div id="tab-history" class="tab" style="background-color: #EEEEEE;"><a href="#">Lịch sử được
-                                quản lý</a></div>
-                        <div id="tab-consumption" class="tab"><a href="#">Lịch sử tiêu thụ</a></div>
-                        <div id="tab-payment" class="tab"><a href="#">Lịch sử thanh toán</a></div>
+                        <div id="tab-detail" class="tab"><a href="information.html">Thông tin chi tiết</a></div>
+                        <div id="tab-history" class="tab" style="background-color: #EEEEEE;"><a href="managed-history.html">Lịch sử được quản lý</a></div>
+                        <div id="tab-consumption" class="tab"><a href="consumption-history.html">Lịch sử tiêu thụ</a></div>
+                        <div id="tab-payment" class="tab"><a href="payment-history.html">Lịch sử thanh toán</a></div>
                     </div>
                     <div id="detail-history">
                         <!--Code here-->
