add responsive product detail page, change navbar size, responsive footer

--- a/CoCo/front-end/manager/products/product-detail-page.html
+++ b/CoCo/front-end/manager/products/product-detail-page.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/CoCo/front-end/css/template-style.css">
     <link rel="stylesheet" href="css/product-style.css">
+    <link rel="stylesheet" href="css/product-detail-page.css">
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
     <title>Document</title>
@@ -15,7 +16,7 @@
 <body>
     <main>
         <nav class="navbar">
-            <img src="/CoCo/front-end/images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+            <img class="logo-img" src="/CoCo/front-end/images/Logo.png" alt="logo">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
                 <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
@@ -49,7 +50,7 @@
                     <div style="display: flex; justify-content: space-between; align-items: center; width: 100%;">
                         <i class="fa-solid fa-angle-left fa-3x btn" style="color: #9F8D8D;"></i>
                         <div style="display:flex;">
-                            <div class="img-scale" style="width: 100px; height:150px; border: 2px solid #F02424; border-radius: 10px; background-color: var(--grey2);">
+                            <div class="img-scale detail-image-list">
                                 <img src="images/thit-heo.jpg" style="max-width: 100%; max-height:100%; " alt="">
                             </div>
                         </div>
