--- a/CoCo/front-end/admin/managers/manager-details-page.html
+++ b/CoCo/front-end/admin/managers/manager-details-page.html
@@ -15,7 +15,7 @@
     <title>Xem chi tiết thông tin người quản lý</title>
 </head>
 
-<body>
+<body onload="loadData('Nguyen Van A')">
     <main>
 
         <nav class="navbar navbar-expand-lg navbar-light">
@@ -73,9 +73,7 @@
                             <div class="avatar">
                                 <img class="img-thumbnail" src="images/avatar.png" alt="avatar">
                             </div>
-                            <div class="name">
-                                <p>Nguyen Dang Tien Thanh</p>
-                            </div>
+                            <div id="name"></div>
                             <div class="button">
                                 <button type="button" class="btn btn-dark text-white btn-sm">Khóa tài khoản</button>
                             </div>
@@ -120,6 +118,7 @@
 
     <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="js/add-manager-history-table.js"></script>
 </body>
 
 </html>
