--- a/CoCo/front-end/related-people/buy-success.html
+++ b/CoCo/front-end/related-people/buy-success.html
@@ -1,12 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/67328d2701.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" href="../css/template-style.css">
+    <link rel="stylesheet" href="./css/related.css">
+    <link rel="stylesheet" href="./css/buy-success.css">
     <title>Đặt hàng thành công</title>
 </head>
+
 <body>
-    
+    <main>
+        <nav class="navbar">
+            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
+            <ul class="nav-list">
+                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                <li><a href="package-list.html" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+            </ul>
+            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        </nav>
+        <img src="../images/banner.png" alt="banner" class="banner">
+        <div class="content" style="padding: 20px 20px;">
+            <div class="path">
+                <a href="/trang-chu">Trang chủ > </a>
+                <a href="/nhu-yeu-pham">Nhu yếu phẩm</a>
+            </div>
+
+            <div id="success-notification-container">
+                <img src="images/success.png" alt="success_img"><br>
+                <div id="success-text">ĐÃ ĐẶT HÀNG THÀNH CÔNG</div>
+                <div id="return-home">
+                    <a href="information.html">TRỞ LẠI TRANG CÁ NHÂN</a>
+                </div>
+            </div>
+        </div>
+
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="footer-box">
+                    <h3>VỀ CHÚNG TÔI</h3>
+                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương
+                        thức
+                        thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
+                </div>
+                <div class="footer-box">
+                    <h3>LIÊN HỆ</h3>
+                    <div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-phone"></span>
+                            <span>+84945335984</span>
+                        </div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-envelope"></span>
+                            <span>coco123@gmail.com</span>
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <hr style="border: 2px solid white;background-color: white; width: 98%" />
+                <div class="footer-bottom-slogan">
+                    <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
+                    <span style="float: right;">2022</span>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
+
 </html>
