--- a/CoCo/front-end/related-people/cart.html
+++ b/CoCo/front-end/related-people/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<>
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -16,155 +16,155 @@
     <link rel="stylesheet" href="./css/related.css">
     <link rel="stylesheet" href="./css/cart.css">
     <title>Giỏ hàng</title>
-    </head>
+</head>
 
-    <body>
-        <main>
-            <nav class="navbar">
-                <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
-                <ul class="nav-list">
-                    <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
-                    <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
-                    <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
-                    <li><a href="#" class="nav-links">THANH TOÁN</a></li>
-                </ul>
-                <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
-            </nav>
-            <img src="../images/banner.png" alt="banner" class="banner">
-            <div class="content" style="padding: 20px 20px;">
-                <div class="path">
-                    <a href="/trang-chu">Trang chủ > </a>
-                    <a href="/gio-hang">Giỏ hàng</a>
+<body>
+    <main>
+        <nav class="navbar">
+            <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
+            <ul class="nav-list">
+                <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
+                <li><a href="package-list.html" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
+                <li><a href="#" class="nav-links">THANH TOÁN</a></li>
+            </ul>
+            <div class="nav-menu"><i class="fa-solid fa-bars fa-2x"></i></div>
+        </nav>
+        <img src="../images/banner.png" alt="banner" class="banner">
+        <div class="content" style="padding: 20px 20px;">
+            <div class="path">
+                <a href="/trang-chu">Trang chủ > </a>
+                <a href="/gio-hang">Giỏ hàng</a>
+            </div>
+
+            <div id="current-cart">
+                <div class="selected-package-container">
+                    <div class="selected-package">
+                        <div class="package-image">
+                            <img src="images/package_demo.png" alt="package_img">
+                        </div>
+                        <div class="package-detail">
+                            <div class="package-name">Combo Thịt cá trứng 1</div>
+                            <div class="package-products">
+                                500g thịt heo đùi<br>
+                                200g cá basa phi lê<br>
+                                2 vỉ trứng gà<br>
+                                300g nạm bò
+                            </div>
+                        </div>
+                        <div class="price">175,000đ</div>
+                        <div class="amount-modify">
+                            <button id="decrease">-</button>
+                            <p id="current-amount">1</p>
+                            <button id="increase">+</button>
+                        </div>
+                        <div class="total">175,000đ</div>
+                        <div class="remove-package">
+                            <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
+                        </div>
+                    </div>
                 </div>
-
-                <div id="current-cart">
-                    <div class="selected-package-container">
-                        <div class="selected-package">
-                            <div class="package-image">
-                                <img src="images/package_demo.png" alt="package_img">
-                            </div>
-                            <div class="package-detail">
-                                <div class="package-name">Combo Thịt cá trứng 1</div>
-                                <div class="package-products">
-                                    500g thịt heo đùi<br>
-                                    200g cá basa phi lê<br>
-                                    2 vỉ trứng gà<br>
-                                    300g nạm bò
-                                </div>
-                            </div>
-                            <div class="price">175,000đ</div>
-                            <div class="amount-modify">
-                                <button id="decrease">-</button>
-                                <p id="current-amount">1</p>
-                                <button id="increase">+</button>
-                            </div>
-                            <div class="total">175,000đ</div>
-                            <div class="remove-package">
-                                <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
+                <div class="selected-package-container">
+                    <div class="selected-package">
+                        <div class="package-image">
+                            <img src="images/package_demo.png" alt="package_img">
+                        </div>
+                        <div class="package-detail">
+                            <div class="package-name">Combo Thịt cá trứng 2</div>
+                            <div class="package-products">
+                                700g thịt heo đùi<br>
+                                300g cá basa phi lê<br>
+                                2 vỉ trứng gà<br>
+                                300g nạm bò
                             </div>
                         </div>
-                    </div>
-                    <div class="selected-package-container">
-                        <div class="selected-package">
-                            <div class="package-image">
-                                <img src="images/package_demo.png" alt="package_img">
-                            </div>
-                            <div class="package-detail">
-                                <div class="package-name">Combo Thịt cá trứng 2</div>
-                                <div class="package-products">
-                                    700g thịt heo đùi<br>
-                                    300g cá basa phi lê<br>
-                                    2 vỉ trứng gà<br>
-                                    300g nạm bò
-                                </div>
-                            </div>
-                            <div class="price">225,000đ</div>
-                            <div class="amount-modify">
-                                <button id="decrease">-</button>
-                                <p id="current-amount">1</p>
-                                <button id="increase">+</button>
-                            </div>
-                            <div class="total">225,000đ</div>
-                            <div class="remove-package">
-                                <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
-                            </div>
+                        <div class="price">225,000đ</div>
+                        <div class="amount-modify">
+                            <button id="decrease">-</button>
+                            <p id="current-amount">1</p>
+                            <button id="increase">+</button>
+                        </div>
+                        <div class="total">225,000đ</div>
+                        <div class="remove-package">
+                            <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
                         </div>
                     </div>
-                    <div class="selected-package-container">
-                        <div class="selected-package">
-                            <div class="package-image">
-                                <img src="images/package_demo.png" alt="package_img">
-                            </div>
-                            <div class="package-detail">
-                                <div class="package-name">Combo Thịt cá trứng 3</div>
-                                <div class="package-products">
-                                    800g thịt heo đùi<br>
-                                    500g cá basa phi lê<br>
-                                    2 vỉ trứng gà<br>
-                                    500g nạm bò
-                                </div>
-                            </div>
-                            <div class="price">300,000đ</div>
-                            <div class="amount-modify">
-                                <button id="decrease">-</button>
-                                <p id="current-amount">1</p>
-                                <button id="increase">+</button>
-                            </div>
-                            <div class="total">300,000đ</div>
-                            <div class="remove-package">
-                                <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
-                            </div>
-                        </div>
-                    </div>
-
                 </div>
-
-                <div id="cart-buttons">
-                    <div id="purchase">
-                        <a href="./buy-success.html">Mua hàng</a>
-                    </div>
-                    <div id="clear-cart">
-                        <a href="#">Xoá giỏ</a>
+                <div class="selected-package-container">
+                    <div class="selected-package">
+                        <div class="package-image">
+                            <img src="images/package_demo.png" alt="package_img">
+                        </div>
+                        <div class="package-detail">
+                            <div class="package-name">Combo Thịt cá trứng 3</div>
+                            <div class="package-products">
+                                800g thịt heo đùi<br>
+                                500g cá basa phi lê<br>
+                                2 vỉ trứng gà<br>
+                                500g nạm bò
+                            </div>
+                        </div>
+                        <div class="price">300,000đ</div>
+                        <div class="amount-modify">
+                            <button id="decrease">-</button>
+                            <p id="current-amount">1</p>
+                            <button id="increase">+</button>
+                        </div>
+                        <div class="total">300,000đ</div>
+                        <div class="remove-package">
+                            <img src="images/trash.png" style="width: 30px; height: 30px;" alt="trash_img">
+                        </div>
                     </div>
                 </div>
 
             </div>
+
+            <div id="cart-buttons">
+                <div id="purchase">
+                    <a href="./buy-success.html">Mua hàng</a>
+                </div>
+                <div id="clear-cart">
+                    <a href="#">Xoá giỏ</a>
+                </div>
             </div>
 
-            <script></script>
-            <footer class="footer">
-                <div class="footer-top">
-                    <div class="footer-box">
-                        <h3>VỀ CHÚNG TÔI</h3>
-                        <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương
-                            thức
-                            thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
-                    </div>
-                    <div class="footer-box">
-                        <h3>LIÊN HỆ</h3>
-                        <div>
-                            <div class="footer-contact">
-                                <span class="fa-solid fa-phone"></span>
-                                <span>+84945335984</span>
-                            </div>
-                            <div class="footer-contact">
-                                <span class="fa-solid fa-envelope"></span>
-                                <span>coco123@gmail.com</span>
-                                <img src="../images/Logo.png" alt="logo" style="width:200px;" />
-                            </div>
+        </div>
+        </div>
 
+        <script></script>
+        <footer class="footer">
+            <div class="footer-top">
+                <div class="footer-box">
+                    <h3>VỀ CHÚNG TÔI</h3>
+                    <p>CoCo là website quản lý danh sách người liên quan đến Covid-19, đồng thời cung cấp phương
+                        thức
+                        thanh toán trực tuyến để mua nhu yếu phẩm ở các địa điểm cách ly và điều trị.</p>
+                </div>
+                <div class="footer-box">
+                    <h3>LIÊN HỆ</h3>
+                    <div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-phone"></span>
+                            <span>+84945335984</span>
                         </div>
+                        <div class="footer-contact">
+                            <span class="fa-solid fa-envelope"></span>
+                            <span>coco123@gmail.com</span>
+                            <img src="../images/Logo.png" alt="logo" style="width:200px;" />
+                        </div>
+
                     </div>
                 </div>
-                <div class="footer-bottom">
-                    <hr style="border: 2px solid white;background-color: white; width: 98%" />
-                    <div class="footer-bottom-slogan">
-                        <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
-                        <span style="float: right;">2022</span>
-                    </div>
+            </div>
+            <div class="footer-bottom">
+                <hr style="border: 2px solid white;background-color: white; width: 98%" />
+                <div class="footer-bottom-slogan">
+                    <span style="float: left;">Cùng nhau vượt qua Đại dịch Covid-19</span>
+                    <span style="float: right;">2022</span>
                 </div>
-            </footer>
-        </main>
-    </body>
+            </div>
+        </footer>
+    </main>
+</body>
 
 </html>
