--- a/CoCo/front-end/related-people/managed-history.html
+++ b/CoCo/front-end/related-people/managed-history.html
@@ -20,7 +20,7 @@
             <img src="../images/Logo.png" alt="logo" style="height:65px; align-self:center;">
             <ul class="nav-list">
                 <li><a href="#" class="nav-links">NGƯỜI LIÊN QUAN COVID-19</a></li>
-                <li><a href="#" class="nav-links">NHU YẾU PHẨM</a></li>
+                <li><a href="package-list.html" class="nav-links">NHU YẾU PHẨM</a></li>
                 <li><a href="#" class="nav-links">THỐNG KÊ</a></li>
                 <li><a href="#" class="nav-links">THANH TOÁN</a></li>
             </ul>
