add homepage coco/manager

--- a/CoCo/front-end/manager/index.html
+++ b/CoCo/front-end/manager/index.html
@@ -12,7 +12,7 @@
 
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
     <title>CoCo</title>
 </head>
 
@@ -22,35 +22,17 @@
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="#">
-                        <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                        <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
                     </a>
                 </div>
             </nav>
         </header>
         <section>
-            <img src="images/banner.png" alt="banner" class="banner">
+            <img src="../images/banner.png" alt="banner" class="banner">
         </section>
 
         <section class="content container-fluid py-5">
             <h1 class="welcome">Chào mừng đến với hệ thống quản lý Covid-19</h1>
-
-            <div class="login-form py-5 px-5">
-                <form>
-                    <div class="form-floating mb-3">
-                        <input class="form-control border-2 border-dark" id="floatingInput"
-                            placeholder="name@example.com">
-                        <label for="floatingInput">Số CMND/CCCD</label>
-                    </div>
-                    <div class="form-floating">
-                        <input type="password" class="form-control border-2 border-dark" id="floatingPassword"
-                            placeholder="Password">
-                        <label for="floatingPassword">Mật khẩu</label>
-                    </div>
-                    <button type="submit" class="sign-in">ĐĂNG NHẬP</button>
-                </form>
-                <a href="#" class="password-missing">Quên mật khẩu?</a>
-            </div>
-
         </section>
 
         <footer class="footer">
