fix homepage manager: add navigation

--- a/CoCo/front-end/index.html
+++ b/CoCo/front-end/index.html
@@ -18,15 +18,13 @@
 
 <body>
     <main class="index">
-        <header style="position:sticky;top:0;z-index: 999;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
-                    </a>
-                </div>
-            </nav>
-        </header>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                </a>
+            </div>
+        </nav>
         <section>
             <img src="images/banner.png" alt="banner" class="banner">
         </section>
@@ -85,6 +83,11 @@
             </div>
         </footer>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
