--- a/CoCo/front-end/manager/index.html
+++ b/CoCo/front-end/manager/index.html
@@ -18,15 +18,41 @@
 
 <body>
     <main class="index">
-        <header style="position:sticky;top:0;z-index: 999;">
-            <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <div class="container-fluid">
-                    <a class="navbar-brand" href="#">
-                        <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
-                    </a>
+        <nav class="navbar sticky-top navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="../images/Logo.png" alt="logo" style="height:65px;align-self:center;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav m-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">NGƯỜI LIÊN QUAN COVID-19</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                NHU YẾU PHẨM
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="#">GÓI SẢN PHẨM</a></li>
+                                <li><a class="dropdown-item" href="#">SẢN PHẨM</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">THỐNG KÊ</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">THANH TOÁN</a>
+                        </li>
+                    </ul>
                 </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
         <section>
             <img src="../images/banner.png" alt="banner" class="banner">
         </section>
@@ -67,6 +93,11 @@
             </div>
         </footer>
     </main>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/c370f69368.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
